finished merging the poms